Fix missing default app icons in launcher.

Setting app launcher icon is multi-step process. At first step we set
default (or pre-loaded icon) and then try to fetch, decode and load
actual icon. For some app fetch/decode step may be skipped. At this case
icon is left what was set at first step. With recent refactoring, app
launcher icon and chrome app icon were split and synced via updater.
App launcher item is created after Chrome app item. Some attributes from
Chrome app are passed via metadata but not the icon.
This CL sets the icon from Chrome app item to app laucnher item at the
moment of creation app launcher item.

Bug: 809269
Test: Manually
Change-Id: Iee8f5701d41f2ea19533d7df3edcc3898d606044
Reviewed-on: https://chromium-review.googlesource.com/902610
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@google.com>
Cr-Commit-Position: refs/heads/master@{#534701}
Former-commit-id: e7ded6a127d060da95ae7fe3c8f622d268f95398